--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
 <app-header></app-header>
-<app-residence></app-residence>
+<div style="border: 5px red solid; display: flex; flex-wrap: wrap;">
+    main content 
+    
+    <div style="height:500px; width: 400px; border:5px grey solid;">
+        <router-outlet></router-outlet>
+    </div>
+    <div style="height:500px; width: 400px; border:5px green solid;">
+
+    </div>
+</div>
