--- a/src/app/residence/residence.component.html
+++ b/src/app/residence/residence.component.html
@@ -1,52 +1,38 @@
-<h1>  Liste des residences</h1>
+<h1>Listes des résidences</h1>
 
-<!-- Champ de recherche -->
-<div class="form-group">
-  <input
-    type="text"
-    class="form-control"
-    placeholder="Rechercher une résidence"
-    [(ngModel)]="searchQuery"
-  />
-</div>
+{{date | date}}
+<input type="text" placeholder="taper l'adresse"  [(ngModel)]="adress">
+{{adress}}
 
-<div *ngFor="let res of  filteredResidences()">
 
-  
-<div style="display: flex; flex-wrap: wrap">
-<div class="card" style="width: 18rem;">
+<div style="display: flex; flex-wrap: wrap;">
+<div class="row" *ngFor="let res of filterByAdress()">
+<div class="card" style="width: 18rem;margin-right: 30px;">
     <img [src]="res.image" class="card-img-top" alt="...">
     <div class="card-body">
-      <h3 class="card-title">{{res.name}}</h3>
-   
-    
+      <h3 class="card-title">{{res.name | uppercase}}</h3>
+      <!-- <h3 class="card-title">{{res.address}}</h3> -->
+      <h3 *ngIf="res.status==='Disponible'"  style="color:green" class="card-text">{{res.status | lowercase}}</h3>
+      <h3 *ngIf="res.status==='Vendu'"  style="color:red" class="card-text">{{res.status}}</h3>
+      <h3 *ngIf="res.status==='En Construction'"  style="color:orange" class="card-text">{{res.status}}</h3>
+      
+      <a href="#" class="btn btn-primary" (click)="showLocation(res.address)">Show location</a>
+      <a href="#" class="btn btn-primary" (click)="addToFavorite2(res)">Like</a>
+      <!-- <a href="#" class="btn btn-primary" routerLink="/details/{{res.id}}">Details</a> -->
+            <a href="#" class="btn btn-primary" [routerLink]="['/details',res.id]">Details</a>
 
-      <div class="status">
-        <div *ngIf="res.status === 'Disponible'">
-          <p class="text-success"><strong>Disponible</strong></p>
-        </div>
+      <a href="#" class="btn btn-primary" (click)="delete(res.id)">Delete</a>
 
-        <div *ngIf="res.status === 'En Construction'">
-          <p class="text-warning"><strong>En Construction</strong></p>
-        </div>
 
-        <div *ngIf="res.status === 'Vendu'">
-          <p class="text-muted"><strong>Vendu</strong></p>
-        </div>
-      </div>
-        
-      <!-- Bouton pour afficher l'adresse -->
-      <a class="btn btn-primary" (click)="showLocation(res.id, res.address)">Show Location</a>
-      <p *ngIf="addressVisibility[res.id]">
-        {{ res.address === 'inconnu' ? 'Adresse inconnue' : res.address }}
-      </p>
-      <button class="btn btn-primary" routerLink= "details/{{res.id}}" >Details</button>
-      <button class="btn btn-outline-danger" (click)="toggleLike(res.id)">
-        <i class="bi bi-heart" [class.text-danger]="res.isLiked"></i> {{ res.isLiked ? 'Retirer des favoris' : 'Ajouter aux favoris' }}
-      </button>
-    
-     <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+
+      <div><h2>{{address}}</h2></div>
     </div>
   </div>
 </div>
+</div>
+
+<div class="row" *ngFor="let res of listFavorite">
+  <ul>
+    <li>{{res.name}}</li>
+  </ul>
 </div>
